# oracle-observer-sample

./: .gitignore
oracle-file-to-parquet/: Cargo.toml  README.md
oracle-file-to-parquet/src/: main.rs
oracle-ingestor-lambda-parquet/: Cargo.toml  README.md  docker-compose.yml  settings.toml.template
oracle-ingestor-lambda-parquet/src/: handler.rs  lib.rs  local.rs  main.rs  settings.rs
oracle-ingestor-lambda-parquet/src/cli/: current.rs  history.rs
