[package]
name = "oracle-file-to-parquet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = {version = "0", features = ["serde"]}
helium-crypto = {version = "0.6.3"}
helium-proto = {git = "https://github.com/helium/proto", branch = "master", features = ["services"]}
file-store = {git = "https://github.com/helium/oracles", branch = "main"}
futures = "*"
lambda_runtime = "0.7"
serde =  {version = "1", features=["derive"]}
serde_json = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros"] }
tokio-util = "0"
parquet = "34.0.0"
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"