[package]
name = "oracle-ingestor-lambda"
version = "0.1.0"
edition = "2021"

[features]
local = []

[dependencies]
anyhow = "1"
chrono = {version = "0", features = ["serde"]}
helium-crypto = {version = "0.6.3"}
helium-proto = {git = "https://github.com/helium/proto", branch = "master", features = ["services"]}
file-store = {git = "https://github.com/helium/oracles", branch = "main"}
futures = "*"
lambda_runtime = "0.7"
serde =  {version = "1", features=["derive"]}
serde_json = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros"] }
tokio-util = "0"
parquet = "34.0.0"
aws-sdk-s3 = "0.21"
aws-config = "0.51"
aws-types = { version = "0.51", features = ["hardcoded-credentials"], optional = true}
env_logger = "0.10.0"
clap = {version = "3", features = ["derive"]}
config = {version="0", default-features=false, features=["toml"]}
tracing = "0"
tracing-subscriber = { version = "0", default-features=false, features = ["env-filter", "registry", "fmt"] }
http = "*"
thiserror = "1"
